# TTsavebot

./: .env.example  .gitignore  Dockerfile  README.md  README.ru.md  bot_tz.md  main.py  pyproject.toml
tests/integration/: test_middlewares_and_handlers.py  test_sqlite_repositories.py
tests/unit/: test_check_access_use_case.py  test_config.py  test_download_video_use_case.py  test_video_request.py
video_bot/: config.py  containers.py
video_bot/core/use_cases/: download_video.py
video_bot/infrastructure/database/: access_repository.py  download_log_repository.py  sqlite.py
video_bot/presentation/: tg_bot.py
video_bot/presentation/handlers/: admin.py  common.py  downloads.py
video_bot/presentation/keyboards/: admin_panel.py
video_bot/presentation/middlewares/: auth.py  superadmin.py
