[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ttsavebot"
version = "0.1.0"
description = "Telegram bot for downloading TikTok and Instagram videos."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ama" }
]
dependencies = [
  "aiogram>=3.17,<4.0",
  "aiosqlite>=0.20,<1.0",
  "yt-dlp>=2026.3.3",
]

[dependency-groups]
dev = [
  "mypy>=1.13,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.9,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["video_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["main.py", "video_bot", "tests"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
